--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,27 +1,30 @@
-pipeline{ 
-agent any 
-stages { 
-stage('Install dependencies') { 
-steps{ 
-script { 
-sh('npm install') 
-} 
-} 
-} 
-        
-stage('Unit Test') { 
-steps{
-script { 
-sh('npm test') 
-} 
-} 
-} 
-stage('Build application') { 
-steps{ 
-script { 
-sh('npm run build-dev') 
-} 
-} 
-} 
-} 
+pipeline {
+    agent any
+    stages {
+        stage('Install dependencies') {
+            steps {
+                sh 'npm install'
+            }
+        }
+
+        stage('Unit Test') {
+            steps {
+                sh 'npm test'
+            }
+        }
+
+        stage('Build application') {
+            steps {
+                sh 'npm run build-dev'
+            }
+        }
+    }
+    post {
+        success {
+            echo 'Pipeline executed successfully!'
+        }
+        failure {
+            echo 'Pipeline failed!'
+        }
+    }
 }
