--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "test": "cross-env NODE_ENV='test' mocha --timeout 20000 --exit",
+    "build-dev": "webpack --config webpack.dev.js --mode development"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
