--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "nodemon app.js",
+    "test": "cross-env NODE_ENV='test' mocha --timeout 20000 --exit",
     "build-dev": "webpack --config webpack.dev.js --mode development"
   },
   "dependencies": {
