--- a/Full-Stack-JS-Project-Frontend/package.json
+++ b/Full-Stack-JS-Project-Frontend/package.json
@@ -20,6 +20,7 @@
     "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^6.29.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.6.1"
   },
