--- a/Full-Stack-JS-Project-Frontend/.gitignore
+++ b/Full-Stack-JS-Project-Frontend/.gitignore
@@ -1,9 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-node_modules/
-Full-Stack-JS-Project-Frontend/node_modules/
-Full-Stack-JS-Project-backOffice/node_modules/
+/node_modules
 /.pnp
 .pnp.js
 
