--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongo": "^0.1.0",
     "mongoose": "^8.11.0",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "natural": "^8.0.1",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
