Integrate Publication Page

--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "dev": "nodemon app.js"
   },
   "dependencies": {
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "~1.4.4",
