--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-session": "^1.18.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
     "mongo": "^0.1.0",
     "mongoose": "^8.12.0",
@@ -29,11 +30,13 @@
     "natural": "^8.0.1",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
+    "owl.carousel": "^2.3.4",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "password-strength": "^0.0.1",
+    "swiper": "^11.2.5",
     "yup": "^1.6.1"
   }
 }
