--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "dev": "nodemon app.js"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^44.2.1",
+    "@ckeditor/ckeditor5-react": "^9.5.0",
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
