--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "password-strength": "^0.0.1",
+    "react-icons": "^5.5.0",
     "swiper": "^11.2.5",
     "yup": "^1.6.1"
   }
