--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "axios": "^1.8.1",
+    "axios": "^1.8.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "~1.4.4",
@@ -37,7 +37,9 @@
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "password-strength": "^0.0.1",
+    "react-chat-engine": "^1.11.28",
     "react-icons": "^5.5.0",
+    "socket.io": "^4.8.1",
     "swiper": "^11.2.5",
     "yup": "^1.6.1"
   }
