--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "passport-google-oauth20": "^2.0.0",
     "password-strength": "^0.0.1",
     "react-chat-engine": "^1.11.28",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "socket.io": "^4.8.1",
     "swiper": "^11.2.5",
