--- a/Full-Stack-JS-Project-Frontend/package.json
+++ b/Full-Stack-JS-Project-Frontend/package.json
@@ -15,6 +15,7 @@
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/rrule": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
+    "@hookform/resolvers": "^4.1.3",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
@@ -35,6 +36,7 @@
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-google-recaptcha": "^3.1.0",
+    "react-hook-form": "^7.54.2",
     "react-router-dom": "^6.29.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
