--- a/Full-Stack-JS-Project-Frontend/package.json
+++ b/Full-Stack-JS-Project-Frontend/package.json
@@ -23,6 +23,7 @@
     "bcrypt": "^5.1.0",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.7",
+    "emoji-picker-react": "^4.12.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "install": "^0.13.0",
