--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "debug": "~2.6.9",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
-    "express": "~4.16.1",
+    "express": "^4.21.2",
     "express-session": "^1.18.1",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
+    "jade": "^1.9.2",
     "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
     "mongo": "^0.1.0",
@@ -37,7 +37,9 @@
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "password-strength": "^0.0.1",
-    "react-chat-engine": "^1.11.28",
+    "pdfkit": "^0.16.0",
+    "puppeteer": "^5.2.1",
+    "react-chat-engine": "^0.1.0",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "socket.io": "^4.8.1",
