--- a/Full-Stack-JS-Project-Frontend/package.json
+++ b/Full-Stack-JS-Project-Frontend/package.json
@@ -7,6 +7,7 @@
     "@ckeditor/ckeditor5-react": "^6.2.0",
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@fullcalendar/core": "^6.1.15",
@@ -24,7 +25,7 @@
     "bcrypt": "^5.1.0",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.7",
-    "emoji-picker-react": "^4.12.0",
+    "emoji-picker-react": "^4.12.2",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "html2pdf.js": "^0.10.3",
