--- a/Full-Stack-JS-Project-Frontend/package.json
+++ b/Full-Stack-JS-Project-Frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.9",
+    "bad-words": "^4.0.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
