--- a/Full-Stack-JS-Project-Frontend/package.json
+++ b/Full-Stack-JS-Project-Frontend/package.json
@@ -25,6 +25,7 @@
     "bad-words": "^4.0.0",
     "bcrypt": "^5.1.0",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.8",
     "dotenv": "^16.4.7",
     "emoji-picker-react": "^4.12.2",
     "express": "^4.21.2",
@@ -38,6 +39,7 @@
     "passport-google-oauth20": "^2.0.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.54.2",
