--- a/Full-Stack-JS-Project-Frontend/package.json
+++ b/Full-Stack-JS-Project-Frontend/package.json
@@ -11,6 +11,7 @@
     "bad-words": "^4.0.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.4.7",
+    "emoji-picker-react": "^4.12.2",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "jwt-decode": "^4.0.0",
