--- a/Full-Stack-JS-Project-Frontend/package.json
+++ b/Full-Stack-JS-Project-Frontend/package.json
@@ -17,6 +17,7 @@
     "@fullcalendar/rrule": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
     "@hookform/resolvers": "^4.1.3",
+    "@stream-io/video-react-sdk": "^1.12.11",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
