--- a/Full-Stack-JS-Project-Frontend/package.json
+++ b/Full-Stack-JS-Project-Frontend/package.json
@@ -43,6 +43,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-google-recaptcha": "^3.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^6.29.0",
     "react-scripts": "5.0.1",
