--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "natural": "^8.0.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "owl.carousel": "^2.3.4",
