--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
+    "openai": "^4.89.1",
     "owl.carousel": "^2.3.4",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
