--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "dev": "nodemon app.js"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^40.2.0",
+    "@ckeditor/ckeditor5-react": "^6.2.0",
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
@@ -37,9 +39,9 @@
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "password-strength": "^0.0.1",
-    "qrcode": "^1.5.4",
     "pdfkit": "^0.16.0",
     "puppeteer": "^5.2.1",
+    "qrcode": "^1.5.4",
     "react-chat-engine": "^0.1.0",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
