--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.8.2",
+    "bad-words": "^4.0.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
+    "chart.js": "^4.4.8",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "db": "^6.0.3",
@@ -44,6 +46,7 @@
     "pdfkit": "^0.16.0",
     "puppeteer": "^5.2.1",
     "qrcode": "^1.5.4",
+    "react-chartjs-2": "^5.3.0",
     "react-chat-engine": "^0.1.0",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
