--- a/Full-Stack-JS-Project-Frontend/package.json
+++ b/Full-Stack-JS-Project-Frontend/package.json
@@ -31,6 +31,7 @@
     "emoji-picker-react": "^4.12.2",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "framer-motion": "^12.6.2",
     "html2pdf.js": "^0.10.3",
     "install": "^0.13.0",
     "js-cookie": "^3.0.5",
