--- a/Full-Stack-JS-Project-backOffice/package.json
+++ b/Full-Stack-JS-Project-backOffice/package.json
@@ -26,6 +26,8 @@
     "chart.js": "^3.9.1",
     "cors": "^2.8.5",
     "formik": "^2.2.9",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
