--- a/Full-Stack-JS-Project-backOffice/package.json
+++ b/Full-Stack-JS-Project-backOffice/package.json
@@ -28,6 +28,8 @@
     "cors": "^2.8.5",
     "formik": "^2.2.9",
     "html2pdf.js": "^0.10.3",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.9",
