--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "html2canvas": "^1.4.1",
     "http-errors": "~1.6.3",
     "jade": "^1.9.2",
     "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.1",
     "mongo": "^0.1.0",
     "mongoose": "^8.12.0",
     "morgan": "~1.9.1",
