--- a/Full-Stack-JS-Project-backOffice/package.json
+++ b/Full-Stack-JS-Project-backOffice/package.json
@@ -31,11 +31,13 @@
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
+    "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.9",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-pro-sidebar": "^0.7.1",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
