--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ GOOGLE_CLIENT_ID=388289107358-ud1mrbl4bp79ail2kafaftkd8v39632b.apps.googleuserco
 GOOGLE_CLIENT_SECRET=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
 GIT_CLIENT_ID=Ov23liWQd6VLClgOiB0X
 GIT_CLIENT_SECRET=3d5097861b08b0947e8f42b653522377abed8a7c
+
+GROQ_API_KEY=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
