--- a/.env
+++ b/.env
@@ -11,3 +11,4 @@ GIT_CLIENT_SECRET=3d5097861b08b0947e8f42b653522377abed8a7c
 
 GROQ_API_KEY=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
 REACT_APP_OPENWEATHER_API_KEY=703f10d8db4421e8e37b38d633e0c083
+REACT_APP_HUGGINGFACE_API_TOKEN=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
