--- a/.env
+++ b/.env
@@ -9,3 +9,4 @@ GIT_CLIENT_ID=Ov23liWQd6VLClgOiB0X
 GIT_CLIENT_SECRET=3d5097861b08b0947e8f42b653522377abed8a7c
 REACT_APP_HUGGINGFACE_API_TOKEN=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
 REACT_APP_GEMINI_API_KEY=AIzaSyCfw_jacNIo7ORhBYWXr9b6uYDeeOc4C7o
+REACT_APP_HUGGINGFACE_API_KEY=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
