--- a/Full-Stack-JS-Project-Frontend/package.json
+++ b/Full-Stack-JS-Project-Frontend/package.json
@@ -40,6 +40,7 @@
     "moment": "^2.29.4",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-chartjs-2": "^5.3.0",
