--- a/Full-Stack-JS-Project-backOffice/package.json
+++ b/Full-Stack-JS-Project-backOffice/package.json
@@ -43,6 +43,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.2",
+    "uuid": "^11.1.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
