--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "pdfkit": "^0.16.0",
     "puppeteer": "^5.2.1",
     "qrcode": "^1.5.4",
+    "qrcode.react": "^4.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-chat-engine": "^0.1.0",
     "react-helmet-async": "^2.0.5",
@@ -57,6 +58,7 @@
     "simple-peer": "^9.11.1",
     "socket.io": "^4.8.1",
     "swiper": "^11.2.5",
+    "uuid": "^11.1.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
