--- a/Full-Stack-JS-Project-Frontend/package.json
+++ b/Full-Stack-JS-Project-Frontend/package.json
@@ -36,6 +36,7 @@
     "html2pdf.js": "^0.10.3",
     "install": "^0.13.0",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.1",
     "jwt-decode": "^4.0.0",
     "moment": "^2.29.4",
     "passport": "^0.7.0",
