--- a/Full-Stack-JS-Project-Frontend/package.json
+++ b/Full-Stack-JS-Project-Frontend/package.json
@@ -39,6 +39,7 @@
     "jspdf": "^3.0.1",
     "jwt-decode": "^4.0.0",
     "moment": "^2.29.4",
+    "or": "^0.2.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "qrcode.react": "^4.2.0",
@@ -48,6 +49,7 @@
     "react-datepicker": "^8.2.1",
     "react-dom": "^19.0.0",
     "react-google-recaptcha": "^3.1.0",
+    "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^6.29.0",
