--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "yup": "^1.6.1"
   },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "supertest": "^7.1.0"
   }
 }
