--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "mongodb-memory-server": "^10.1.4",
+    "sinon": "^20.0.0",
     "supertest": "^7.1.0"
   }
-  
 }
