--- a/.env
+++ b/.env
@@ -13,3 +13,4 @@ GROQ_API_KEY=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
 OPENWEATHER_API_KEY=703f10d8db4421e8e37b38d633e0c083
 REACT_APP_HUGGINGFACE_API_TOKEN=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
 GROQ_API__KEY=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
+tts_new=sk_9a528300cb9d0fde2f09a122f90b3895d0f5adca31387585
