--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "pretest": "node tests/setupMongoDb.js",
     "test": "node node_modules/jest/bin/jest.js",
     "test:mock": "cross-env USE_MOCK_MONGO=true CI=true npm test",
+    "test:reset": "node tests/resetTests.js",
     "build-dev": "nodemon app.js"
   },
   "dependencies": {
