--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "node node_modules/jest/bin/jest.js",
     "test:mock": "cross-env USE_MOCK_MONGO=true CI=true npm test",
     "test:reset": "node tests/resetTests.js",
-    "build-dev": "nodemon app.js"
+    "build-dev": "nodemon app.js",
+    "build-ci": "node app.js --ci-build"
   },
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^40.2.0",
