--- a/.dockerignore
+++ b/.dockerignore
@@ -1,12 +1,22 @@
 node_modules
 npm-debug.log
 .env
+.env.test
 .git
 .gitignore
-.md
-tests/
-coverage/
-data/
-logs/
+README.md
+tests
+coverage
+data
+logs
 ci-build.js
-.env.test
+Dockerfile
+docker-compose.yml
+.vscode
+.idea
+.eslintrc.json
+prettierrc.json
+.prettierrc
+.eslintrc
+tmp
+.cache
