--- a/.dockerignore
+++ b/.dockerignore
@@ -1,22 +1,11 @@
 node_modules
 npm-debug.log
 .env
-.env.test
 .git
 .gitignore
-README.md
-tests
-coverage
-data
-logs
+.md
+tests/
+coverage/
+data/
+logs/
 ci-build.js
-Dockerfile
-docker-compose.yml
-.vscode
-.idea
-.eslintrc.json
-prettierrc.json
-.prettierrc
-.eslintrc
-tmp
-.cache
