--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
  
   app: 
     build: . 
-    image: 192.168.50.4:8083/nodemongoapp:6.0 
+    image: backend
     restart: always 
     container_name: back 
     ports: 
