--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8' 
 services: 
   db: 
-    image: mongo:4.2 
+    image: mohamedoussemaboussida/mongo:4.2 
     container_name: db 
     restart: always 
  
@@ -15,7 +15,7 @@ services:
  
   app: 
     build: . 
-    image: backend
+    image: mohamedoussemaboussida/backend:latest
     restart: always 
     container_name: back 
     ports: 
